[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uploader-canister"
path = "src/main.rs"

[[example]]
name = "uploader-script"
path = "src/upload.rs"

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
serde = "1.0.132"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
garcon = "0.2.3" # FIXME: maybe not needed?
ic-agent = "0.21.0"
